--- a/IMS_Client_4/IMS_Client_4.csproj
+++ b/IMS_Client_4/IMS_Client_4.csproj
@@ -54,8 +54,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ComponentFactory.Krypton.Toolkit">
       <HintPath>..\..\DLL\ComponentFactory.Krypton.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="CoreApp, Version=3.1.2.0, Culture=neutral, processorArchitecture=x86">
@@ -67,8 +66,8 @@
     <Reference Include="DB_backupRestore, Version=2.2.6.0, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\CoreAppLib.1.0.15\lib\DB_backupRestore.dll</HintPath>
     </Reference>
-    <Reference Include="gGlowBox, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\gGlowBox.dll</HintPath>
+    <Reference Include="gGlowBox">
+      <HintPath>..\..\DLL\gGlowBox.dll</HintPath>
     </Reference>
     <Reference Include="RegistrationProcess, Version=1.3.4.6, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\CoreAppLib.1.0.15\lib\RegistrationProcess.dll</HintPath>
@@ -122,6 +121,36 @@
     <Compile Include="Masters\frmCustomerMaster.Designer.cs">
       <DependentUpon>frmCustomerMaster.cs</DependentUpon>
     </Compile>
+    <Compile Include="Masters\frmEmployeeMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Masters\frmEmployeeMaster.Designer.cs">
+      <DependentUpon>frmEmployeeMaster.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\frmProduct-ItemMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Masters\frmProduct-ItemMaster.Designer.cs">
+      <DependentUpon>frmProduct-ItemMaster.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\frmStoreMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Masters\frmStoreMaster.Designer.cs">
+      <DependentUpon>frmStoreMaster.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\frmSupplierMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Masters\frmSupplierMaster.Designer.cs">
+      <DependentUpon>frmSupplierMaster.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Other\frmTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Other\frmTest.Designer.cs">
+      <DependentUpon>frmTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmHome.resx">
@@ -135,6 +164,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Masters\frmCustomerMaster.resx">
       <DependentUpon>frmCustomerMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Masters\frmEmployeeMaster.resx">
+      <DependentUpon>frmEmployeeMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Masters\frmProduct-ItemMaster.resx">
+      <DependentUpon>frmProduct-ItemMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Masters\frmStoreMaster.resx">
+      <DependentUpon>frmStoreMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Masters\frmSupplierMaster.resx">
+      <DependentUpon>frmSupplierMaster.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -354,9 +395,6 @@
     <None Include="Resources\Merchandiserssmall.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\employeesmall.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\purchaseordergreen.png" />
   </ItemGroup>
   <ItemGroup>
@@ -523,6 +561,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\CustomerSmall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn-add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AddButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\employeesmall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\productmastersm.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
