--- a/IMS_Client_4/IMS_Client_4.csproj
+++ b/IMS_Client_4/IMS_Client_4.csproj
@@ -153,6 +153,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\frmCurrencyValueSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings\frmCurrencyValueSetting.Designer.cs">
+      <DependentUpon>frmCurrencyValueSetting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Settings\frmSoftwareSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings\frmSoftwareSetting.Designer.cs">
+      <DependentUpon>frmSoftwareSetting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="User_Management\frmFormRights.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User_Management\frmFormRights.Designer.cs">
+      <DependentUpon>frmFormRights.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmHome.resx">
       <DependentUpon>frmHome.cs</DependentUpon>
     </EmbeddedResource>
@@ -187,6 +205,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Settings\frmCurrencyValueSetting.resx">
+      <DependentUpon>frmCurrencyValueSetting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Settings\frmSoftwareSetting.resx">
+      <DependentUpon>frmSoftwareSetting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="User_Management\frmFormRights.resx">
+      <DependentUpon>frmFormRights.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -267,9 +294,7 @@
     <Folder Include="Reports\RDLC\" />
     <Folder Include="Reports\Report_Forms\" />
     <Folder Include="Sales\" />
-    <Folder Include="Settings\" />
     <Folder Include="Stock_Management\" />
-    <Folder Include="User_Management\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\country.png" />
