Krypton Ribbion Added

--- a/IMS_Client_4/IMS_Client_4.csproj
+++ b/IMS_Client_4/IMS_Client_4.csproj
@@ -54,6 +54,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ComponentFactory.Krypton.Ribbon">
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\ComponentFactory.Krypton.Ribbon.dll</HintPath>
+    </Reference>
     <Reference Include="ComponentFactory.Krypton.Toolkit">
       <HintPath>..\..\DLL\ComponentFactory.Krypton.Toolkit.dll</HintPath>
     </Reference>
@@ -227,6 +230,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Masters\frmSupplierMaster.resx">
       <DependentUpon>frmSupplierMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Other\frmTest.resx">
+      <DependentUpon>frmTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -642,6 +648,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Merchandiserssmall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
