--- a/IMS_Client_4/IMS_Client_4.csproj
+++ b/IMS_Client_4/IMS_Client_4.csproj
@@ -54,29 +54,32 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ComponentFactory.Krypton.Toolkit">
-      <HintPath>..\..\DLL\ComponentFactory.Krypton.Toolkit.dll</HintPath>
+    <Reference Include="ComponentFactory.Krypton.Ribbon, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\ComponentFactory.Krypton.Ribbon.dll</HintPath>
+    </Reference>
+    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.6.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\ComponentFactory.Krypton.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="CoreApp, Version=3.1.2.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\CoreApp.dll</HintPath>
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\CoreApp.dll</HintPath>
     </Reference>
     <Reference Include="CoreSys, Version=1.1.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\CoreSys.dll</HintPath>
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\CoreSys.dll</HintPath>
     </Reference>
     <Reference Include="DB_backupRestore, Version=2.2.6.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\DB_backupRestore.dll</HintPath>
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\DB_backupRestore.dll</HintPath>
     </Reference>
-    <Reference Include="gGlowBox">
-      <HintPath>..\..\DLL\gGlowBox.dll</HintPath>
+    <Reference Include="gGlowBox, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\gGlowBox.dll</HintPath>
     </Reference>
     <Reference Include="RegistrationProcess, Version=1.3.4.6, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\RegistrationProcess.dll</HintPath>
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\RegistrationProcess.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.ServiceProcess, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\System.ServiceProcess.dll</HintPath>
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\System.ServiceProcess.dll</HintPath>
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
@@ -93,7 +96,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="UserManagement, Version=1.3.5.1, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\CoreAppLib.1.0.15\lib\UserManagement.dll</HintPath>
+      <HintPath>..\packages\CoreAppLib.1.0.16\lib\UserManagement.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
