--- a/IMS_Client_4/IMS_Client_4.csproj
+++ b/IMS_Client_4/IMS_Client_4.csproj
@@ -55,7 +55,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ComponentFactory.Krypton.Toolkit">
-      <HintPath>..\..\DLL\ComponentFactory.Krypton.Toolkit.dll</HintPath>
+      <HintPath>..\..\..\..\Tailoring document\Debug\ComponentFactory.Krypton.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="CoreApp, Version=3.1.2.0, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\CoreAppLib.1.0.15\lib\CoreApp.dll</HintPath>
@@ -67,7 +67,7 @@
       <HintPath>..\packages\CoreAppLib.1.0.15\lib\DB_backupRestore.dll</HintPath>
     </Reference>
     <Reference Include="gGlowBox">
-      <HintPath>..\..\DLL\gGlowBox.dll</HintPath>
+      <HintPath>..\..\..\..\Tailoring document\Debug\gGlowBox.dll</HintPath>
     </Reference>
     <Reference Include="RegistrationProcess, Version=1.3.4.6, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\CoreAppLib.1.0.15\lib\RegistrationProcess.dll</HintPath>
